не понимаю что делаю

--- a/THE_GAME/THE_GAME.csproj
+++ b/THE_GAME/THE_GAME.csproj
@@ -8,4 +8,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Clicker12\Clicker12.csproj" />
+  </ItemGroup>
+
 </Project>
